plugins {
  alias(libs.plugins.versions)
  alias(libs.plugins.version.catalog.update)
}


allprojects {
  group = "test.java.client"
  version = "1.0.0"

  repositories {
    mavenLocal()
    mavenCentral()
  }

}

subprojects {

  apply {
    plugin("java")
  }

  java {
    sourceCompatibility = JavaVersion.VERSION_20
    targetCompatibility = JavaVersion.VERSION_20
  }

  dependencies {
    // annotation
    compileOnly(libs.jetbrains.annotations)
    // log
    implementation(libs.slf4j)
    // test
    testCompileOnly(libs.jetbrains.annotations)
    testImplementation(libs.logback)
    testImplementation(libs.bundles.junit)
    testImplementation(libs.assertj)
    testImplementation(libs.awaitility)
    testImplementation(libs.easyrandom.core)
  }

  tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
    options.compilerArgs += [
      "-parameters",
      "--enable-preview"
    ]
  }

  tasks.withType(JavaExec).configureEach {
    jvmArgs = [
      "--enable-preview"
    ]
  }

  tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs = [
      "--enable-preview"
    ]
  }
}

apply from: "./gradle_scripts/version_catalog_update.gradle"
